# Software-Engineering-Intern-R-D-Assignment

./: .gitignore  README.md  package-lock.json  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/edgedetectionviewer/: MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: themes.xml
gl/: GLRenderer.kt
web/: index.html  package-lock.json  package.json  tsconfig.json
web/src/: index.ts
